--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 [
   "001_教育法基礎概念.txt",
-  "002_學校法人設立規定.txt",
+  "002_學生自治資訊公開法.txt",
   "007_學生自治訴訟法.txt",
   "015_教師法相關條文.txt",
   "023_特殊教育法規.txt"
