--- a/file/manifest.json
+++ b/file/manifest.json
@@ -1,7 +1,5 @@
 [
-  "001_教育法基礎概念.txt",
-  "002_學生自治資訊公開法.txt",
-  "007_學生自治訴訟法.txt",
-  "015_教師法相關條文.txt",
-  "023_特殊教育法規.txt"
+  "0007_學生自治訴訟法.txt",
+  "0581_自治資訊公開法.txt",
+  "1359_跨校區事務條例.txt"
 ]
